kubernetes/apps/flux-system/webhooks/app/github/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook-envoy
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "flux-webhook.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hook/
    backendRefs:
    - name: webhook-receiver
      port: 80
