kubernetes/apps/flux-system/webhooks/app/github/ingress.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kubernetes/master/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${HOME_DOMAIN}"
spec:
  ingressClassName: external
  rules:
  - host: "flux-webhook.${HOME_DOMAIN}"
    http:
      paths:
      - path: /hook/
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
